# CMakeTutorial

./: .gitignore  README.md
Tutorial-01/: CMakeLists.txt  README.md
Tutorial-01/src/: Pikachu.h  main.cpp
Tutorial-02/: CMakeLists.txt  README.md
Tutorial-02/include/: Meowth.h  Pokemon.h
Tutorial-03/: CMakeLists.txt  README.md
Tutorial-03/include/: Greninja.h
Tutorial-04/: CMakeLists.txt  README.md
Tutorial-04/applications/Pallet/: CMakeLists.txt
Tutorial-04/applications/Pallet/src/: main.cpp
Tutorial-04/src/: Greninja.cpp  Pikachu.cpp  Pokemon.cpp
Tutorial-05/: CMakeLists.txt  README.md
Tutorial-05/applications/Pallet/: CMakeLists.txt
Tutorial-05/applications/Pallet/src/: main.cpp
Tutorial-05/include/: Pokemon.h
Tutorial-05/src/: Meowth.cpp
Tutorial-06/: CMakeLists.txt  README.md
Tutorial-06/applications/Pallet/: CMakeLists.txt
Tutorial-06/applications/Pallet/src/: main.cpp
Tutorial-06/cmake/modules/: Findimgui.cmake
Tutorial-06/include/: Greninja.h  Meowth.h  Pikachu.h  Pokemon.h
Tutorial-06/src/: Greninja.cpp  Pokemon.cpp
cmake-init/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake-init/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake-init/source/: lib.cpp
cmake-init/test/: CMakeLists.txt
cmake-init/test/source/: cmake-init_test.cpp
